# churn_prediction_in_the_banking_industry

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
churn_prediction_in_the_banking_industry/: __init__.py  config.py  dataset.py  features.py  main.py  plots.py
churn_prediction_in_the_banking_industry/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Churn.ipynb  Churn_Project.ipynb  Untitled.ipynb
