[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "churn_prediction_in_the_banking_industry"
version = "0.0.1"
description = "This project aims to highlight key factors influencing churn and enable the bank to take proactive actions"
authors = [
  { name = "SELAB Linda Hind" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["churn_prediction_in_the_banking_industry"]
force_sort_within_sections = true
